1 plot added at the end - varImpPlot vs var popularity with additional columns removed. They dominated entire popularity plot

--- a/ml/pracuj.Rmd
+++ b/ml/pracuj.Rmd
@@ -777,6 +777,10 @@ tabsetPanel(
   tabPanel(
     "Importance of variables vs their popularity - complete dataset",
     img(src = "plots/cvRF/importanceVsAppearanceBigDF.png")
+  ),
+  tabPanel(
+    "Importance of variables vs their popularity - complete dataset (additional columns omited)",
+    img(src = "plots/cvRF/varImpVSKWCountDS_OK.png")
   )
 )
 ```
